force-app/main/default/objects/Hotel__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The city where the hotel is located.</description>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>