force-app/main/default/objects/Hotel__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>The country where the hotel is located.</description>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>