force-app/main/default/objects/Hotel__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The contact email address of the hotel.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>