force-app/main/default/objects/Hotel__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>The contact phone number of the hotel.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>