force-app/main/default/objects/Hotel__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>The website of the hotel.</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>